--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -4,6 +4,7 @@
 
 /* Start Global Rules*/
 * {
+    box-sizing: border-box;
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     -moz-box-sizing: border-box;
@@ -13,4 +14,182 @@ body {
     font-family: "Work Sans", sans-serif;
 }
 
+.parent {
+    background-color: #EEE;
+}
+
+.container {
+    padding-left: 15px;
+    padding-right: 15px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+/* Small */
+@media (min-width: 768px) {
+    .container {
+        width: 750px;
+    }
+}
+
+/* Medium */
+@media (min-width: 992px) {
+    .container {
+        width: 970px;
+    }
+}
+
+/* Large */
+@media (min-width: 1200px) {
+    .container {
+        width: 1170px;
+    }
+}
+
 /* End Global Rules */
+
+/* Start Header */
+.header {
+    padding: 20px;
+}
+
+.header .container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.header .logo {
+    width: 60px;
+}
+
+.header .links {
+    position: relative;
+}
+
+.header .links .icon {
+    width: 30px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-end;
+}
+
+@media (min-width: 1200px) {
+    .header .links .icon {
+        display: none;
+    }
+}
+
+.header .links .icon span {
+    background-color: #333;
+    margin-bottom: 5px;
+    height: 2px;
+
+}
+
+.header .links .icon span:first-child {
+    width: 100%;
+}
+
+.header .links .icon span:nth-child(2) {
+    width: 60%;
+    transition: 0.5s;
+}
+
+.header .links:hover .icon span:nth-child(2) {
+    width: 100%;
+}
+
+
+.header .links .icon span:last-child {
+    width: 100%;
+}
+
+.header .links ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    background-color: #F6F6F6;
+    position: absolute;
+    right: 0;
+    min-width: 200px;
+    top: calc(100% + 15px);
+    display: none;
+}
+
+@media (min-width: 1200px) {
+    .header .links ul {
+        display: block;
+        background-color: transparent;
+        position: static;
+        display: flex;
+    }
+
+}
+
+.header .links ul::before {
+    content: "";
+    border-width: 10px;
+    border-style: solid;
+    border-color: transparent transparent #F6F6F6;
+    position: absolute;
+    right: 5px;
+    top: -20px;
+}
+
+@media (min-width: 1200px) {
+    .header .links ul::before {
+        display: none;
+    }
+}
+
+.header .links:hover ul {
+    display: block;
+}
+
+@media (min-width: 1200px) {
+    .header .links:hover ul {
+        display: flex;
+    }
+}
+
+
+.header .links ul li a {
+    display: block;
+    padding: 15px;
+    text-decoration: none;
+    color: #333;
+    transition: 0.5s;
+
+}
+
+@media (min-width: 1200px) {
+    .header .links ul li a {
+        padding: 0 15px;
+        transition: 0.1s;
+    }
+}
+
+.header .links ul li a:hover {
+    padding-left: 25px;
+}
+
+@media (min-width: 1200px) {
+    .header .links ul li a:hover {
+        padding-left: 15px;
+        transform: rotate(5deg);
+    }
+}
+
+.header .links ul li:not(:last-child) {
+    border-bottom: 1px solid #DDD;
+}
+
+@media (min-width: 1200px) {
+    .header .links ul li:not(:last-child) {
+        border-bottom: none;
+    }
+
+}
+
+/* End Header */
