--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -5,7 +5,8 @@
     --section-background: #f6f6f6;
     --p-color: #777;
     --padding-sections: 60px;
-    --line-height-p: 1.6
+    --line-height-p: 1.6;
+    --transition-duration: 0.5s;
 }
 
 /* End Variables */
@@ -16,6 +17,10 @@
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     -moz-box-sizing: border-box;
+}
+
+html {
+    scroll-behavior: smooth;
 }
 
 body {
@@ -52,6 +57,12 @@ body {
     .container {
         width: 1170px;
     }
+}
+
+.grid-sections {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    gap: 20px;
 }
 
 /* End Global Rules */
@@ -129,7 +140,7 @@ body {
 
 .header .links .icon span:nth-child(2) {
     width: 60%;
-    transition: 0.5s;
+    transition: var(--transition-duration);
 }
 
 .header .links:hover .icon span:nth-child(2) {
@@ -196,7 +207,7 @@ body {
     padding: 15px;
     text-decoration: none;
     color: #333;
-    transition: 0.5s;
+    transition: var(--transition-duration);
 
 }
 
@@ -259,7 +270,7 @@ body {
 
 @media (min-width: 1200px) {
     .landing .intro-text h1 {
-        color: var(--second-color);
+        color: var(--main-color);
     }
 }
 
@@ -283,11 +294,6 @@ body {
     background-color: var(--section-background);
 }
 
-.feature .container {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-    gap: 20px;
-}
 
 .feature .feat {
     padding: 20px;
@@ -317,9 +323,6 @@ body {
 }
 
 .services .services-content {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-    gap: 30px;
     margin-top: 100px;
 }
 
@@ -390,9 +393,6 @@ body {
 
 
 .portfolio .portfolio-content {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-    gap: 30px;
     margin-top: 100px;
 }
 
